@@ -11,16 +11,17 @@ import os
 
 # TEST
 
-STBond = Bond.ShortTerm(1000, 100)
-LTBond = Bond.LongTerm(3000, 100)
+STBond = Bond.ShortTerm(1000, 100, '01/01/2005')
+LTBond = Bond.LongTerm(3000, 100, '01/01/2005')
 
 data = []
-data.append(go.Scatter(y=STBond.interestSeries(), name='Short Term Interest'))
-data.append(go.Scatter(y=LTBond.interestSeries(), name='Long Term Interest'))
+data.append(go.Scatter(y=STBond.interestSeriesComplete()[1], x=STBond.interestSeriesComplete()[0], name='Short Term Interest'))
+data.append(go.Scatter(y=LTBond.interestSeriesComplete()[1], x=LTBond.interestSeriesComplete()[0], name='Long Term Interest'))
 
 
 #STBond.drawPlot()
 #LTBond.drawPlot()
+
 
 
 plotpath = os.path.abspath("../Results/Bond_Interest_Plot.html")
