@@ -8,4 +8,5 @@ Project : Investors Simulation
 - [22-02-2017] [1.21] Draw plot for a bond
 - [22-02-2017] [1.22] Draw plot for a stock
 - [23-02-2017] [1.3] Update the class Bond, Stock and Investor + Draw better graph for bonds and stocks
+- [23-02-2017] [1.31] Update the investor class + draw 3 types of investors
 
